@@ -1,6 +1,7 @@
 ufsutils (9.2-2) UNRELEASED; urgency=low
 
   * Avoid kfreebsd-kernel-headers versions prior to ino_t fix.
+  * Remove gratuitous dependency on libtermcap / libtinfo.
 
  -- Robert Millan <rmh@debian.org>  Sat, 26 Oct 2013 17:47:36 +0200
 
